--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./images/telegram.svg">
     <link rel="stylesheet" href="./css/main.css">
     <style type="text/tailwindcss"></style>
 </head>
