--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <button type="button" class="cursor-pointer microphone-icon">
                 <img src="./images/microphone.svg" alt="Microphone icon" width="30" height="30">
             </button>
+            <button type="button" class="cursor-pointer camera-icon">
+                <img src="./images/camera.svg" alt="Camera icon" width="30" height="30">
+            </button>
             <button type="submit">
                 <img src="./images/telegram.svg" alt="Telegram icon" width="30" height="30">
             </button>
